feat: Introduce dashboard, admin staff management, and a new Teal-based UI theme with core components. add actions for staff --> delete prepare update staff modal

--- a/components.json
+++ b/components.json
@@ -1,6 +1,5 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
-  "style": "new-york",
   "rsc": true,
   "tsx": true,
   "tailwind": {
@@ -11,7 +10,8 @@
     "prefix": ""
   },
   "iconLibrary": "lucide",
-  "rtl": false,
+  "style": "base-nova",
+  "rtl": true,
   "aliases": {
     "components": "@/components",
     "utils": "@/lib/utils",
